--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -18,6 +18,18 @@
 }
 
 .formContainer {
-	max-width: 60%;
-	width: 60%;
+	width: 100%;
+	max-width: 100%;
+	@media screen and (min-width: 768px) {
+		max-width: 80%;
+		width: 80%;
+	}
+	@media screen and (min-width: 1024px) {
+		max-width: 60%;
+		width: 60%;
+	}
+}
+
+.svgDialog {
+	margin-top: -10px;
 }
