--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -63,7 +63,7 @@ input.floatingLab {
 	font-family: 'Old Standard TT', serif;
 	font-size: 18px;
 	padding-left: 10px;
-
+	padding-top: 10px;
 	&:hover {
 		background-color: #eee;
 	}
